# hginput

./: .gitignore  README.md  config.json  datacheck.ipynb  entry.py  opt.db  pyproject.toml
command/: __init__.py  gather.py  merge.py
draft/: autogui.py  hand_landmark.py
hginput/command/: __init__.py  launch.py
hginput/command/dataset/: create.py  gather.py
hginput/command/model/: optimize.py  summary.py  train.py
hginput/datatypes/: config.py  metadata.py
hginput/model/: datamodule.py  model.py
hginput/model/checkpoints/: example.ckpt  example_metadata.json  v1.ckpt  v1_metadata.json
hginput/util/: camera.py  const.py  image.py  mediapipe.py
