[tool.poetry]
name = "hginput"
version = "0.1.0"
description = ""
authors = ["a4rcvv <35623957+a4rcvv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python = "^4.7.0.72"
mediapipe = "^0.10.0"
pytorch-lightning = "^2.0.1.post0"
click = "^8.1.3"
polars = "^0.17.6"
scikit-learn = "^1.2.2"
dataclasses-json = "^0.5.7"
wandb = "^0.15.2"
torchmetrics = "^0.11.4"
rich = "^13.3.5"
torchinfo = "^1.8.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
